fix: glass on safari

--- a/src/components/GlassMaterial/GlassMaterial.module.css
+++ b/src/components/GlassMaterial/GlassMaterial.module.css
@@ -20,3 +20,7 @@
 	mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
 	mask-composite: exclude;
 }
+
+.safariGlassWrapper {
+	position: relative;
+}
